--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -138,9 +138,15 @@
   text-align: center;
   h1 {
     line-height: 1.2;
+    @media only screen and (max-width: 767px) {
+      font-size: 2.2em;
+    }
   }
   h2 {
     font-size: 1.4em;
     margin: 0 0 0.5em 0;
+    @media only screen and (max-width: 767px) {
+      font-size: 1.2em;
+    }
   }
 }
